--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>黑手网</title>
 </head>
 <body>
-    <p>黑手合集</p>
+<p>黑手合集</p>
 <video width="800" autoplay="autoplay" controls="controls">
-    <source src="黑手哥大合集.mp4" type="黑手大合集.mp4">
+  <source src="./黑手哥大合集.mp4" type="黑手大合集.mp4">
 </video>
 </body>
 </html>
