--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <p>黑手合集</p>
 <video width="800" autoplay="autoplay" controls="controls" src="黑手哥大合集.mp4">
+<a href="http://m.kugou.com/">点此立即跳转到酷狗音乐</a>
 </video>
 </body>
 </html>
