--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <title>黑手网</title>
 </head>
 <body>
+<h1>黑手网</h1>
+<h1>===================================</h1>
+<h1>黑手视频在线播放</h1>
+<a href="https://xzheifen.github.io/heji1.html">黑手合集(1)</a>
+<h1>===================================</h1>
+<p>下面是为操控电脑的wxb准备的撤离路线</p>
 <a href="http://m.kugou.com/">点此立即跳转到酷狗音乐</a>
-<p>黑手合集</p>
-<video width="800" autoplay="autoplay" controls="controls" src="黑手哥大合集.mp4">
-</video>
+<a href="https://m.iqiyi.com/v_19rrjvb5kk.html?vfrm=2-3-0-1">点此立即播放猫和老鼠</a>
 </body>
 </html>
