--- a/heji1.html
+++ b/heji1.html
@@ -8,5 +8,6 @@
 <h1>黑手合集(1)</h1>
 <p>播放请调小音量</p>
 <video width="800" autoplay="autoplay" controls="controls" src="黑手哥大合集.mp4"></video>
+<a href="https://xzheifen.github.io/">返回主页</a>
 </body>
 </html>
