--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <h1>===================================</h1>
 <h1>黑手视频在线播放</h1>
 <a href="https://xzheifen.github.io/heji1.html">黑手合集(1)</a>
+<a href="https://xzheifen.github.io/fozu.html">佛祖黑手</a>
 <h1>===================================</h1>
 <p>下面是为操控电脑的wxb准备的撤离路线</p>
-<a href="http://m.kugou.com/">点此立即跳转到酷狗音乐</a>
-<a href="https://m.iqiyi.com/v_19rrjvb5kk.html?vfrm=2-3-0-1">点此立即播放猫和老鼠</a>
+<a href="http://www.kugou.com/">点此立即跳转到酷狗音乐</a>
+<a href="https://www.iqiyi.com/v_19rrjvb5kk.html?vfrm=2-3-0-1">点此立即播放猫和老鼠</a>
 </body>
 </html>
