--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>===================================</h1>
 <h1>黑手视频在线播放</h1>
 <a href="https://xzheifen.github.io/heji1.html">黑手合集(1)</a>
+<a href="https://xzheifen.github.io/cnmd.html">黑手合集(2)</a>
 <a href="https://xzheifen.github.io/fozu.html">佛祖黑手</a>
 <h1>===================================</h1>
 <p>下面是为操控电脑的wxb准备的撤离路线</p>
