--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <a href="https://xzheifen.github.io/cnmd.html">黑手合集(2)</a>
 <a href="https://xzheifen.github.io/heji3.html">黑手合集(3)</a>
 <a href="https://xzheifen.github.io/fozu.html">佛祖黑手</a>
-<h1>===================================</h1>
 <p>下面是为操控电脑的wxb准备的撤离路线</p>
 <a href="http://www.kugou.com/">点此立即跳转到酷狗音乐</a>
-<a href="https://www.iqiyi.com/v_19rrjvb5kk.html?vfrm=2-3-0-1">点此立即播放猫和老鼠</a>
+<h1>===================================</h1>
+<a href="https://xzheifen.github.io/qita.html">其他玩意（无关黑手）</a>
 </body>
 </html>
