--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <a href="https://xzheifen.github.io/fozu.html">佛祖黑手</a>
 <h1>===================================</h1>
 <a href="https://xzheifen.github.io/qita.html">其他玩意（无关黑手）</a>
+<a href="https://xzheifen.github.io/updatelog.html">更新日志</a>
 </body>
 </html>
