--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <title>黑手网</title>
 </head>
 <body>
-<h1>黑手网</h1>
-<h1>===================================</h1>
-<h1>黑手视频在线播放</h1>
-<a href="https://xzheifen.github.io/heji1.html">黑手合集(1)</a>
-<a href="https://xzheifen.github.io/cnmd.html">黑手合集(2)</a>
-<a href="https://xzheifen.github.io/heji3.html">黑手合集(3)</a>
-<a href="https://xzheifen.github.io/fozu.html">佛祖黑手</a>
-<h1>===================================</h1>
-<a href="https://xzheifen.github.io/qita.html">其他玩意（无关黑手）</a>
-<a href="https://xzheifen.github.io/updatelog.html">更新日志</a>
+  <h1>黑手网</h1>
+  <h1>===================================</h1>
+  <h1>黑手视频在线播放</h1>
+  <a href="https://xzheifen.github.io/fenye/heji1.html">黑手合集(1)</a>
+  <a href="https://xzheifen.github.io/fenye/heji2.html">黑手合集(2)</a>
+  <a href="https://xzheifen.github.io/fenye/heji3.html">黑手合集(3)</a>
+  <a href="https://xzheifen.github.io/fenye/fozu.html">佛祖黑手</a>
+  <h1>===================================</h1>
+  <a href="https://xzheifen.github.io/fenye/qita.html">其他玩意（无关黑手）</a>
+  <a href="https://xzheifen.github.io/fenye/updatelog.html">更新日志</a>
 </body>
 </html>
