--- a/fenye/fozu.html
+++ b/fenye/fozu.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>黑手网-黑手合集(2)</title>
+<title>黑手网-佛祖黑手</title>
 </head>
 <body>
-<h1>黑手合集(2)</h1>
+<h1>佛祖黑手</h1>
 <p>播放请调小音量</p>
-<video width="800" autoplay="autoplay" controls="controls" src="cnm的.mp4"></video>
+<video width="800" autoplay="autoplay" controls="controls" src="videoradio/fozu.mp4"></video>
 <a href="https://xzheifen.github.io/">返回主页</a>
 </body>
 </html>
