--- a/fenye/qita.html
+++ b/fenye/qita.html
@@ -7,7 +7,7 @@
 <body>
 <h1>其他东西（与黑手无关）</h1>
 <h1>===================================</h1>
-<a href="https://xzheifen.github.io/中国功夫.mp3">中国功夫音乐（打扇子音乐）</a>
+<a href="https://xzheifen.github.io/fenye/videoradio/中国功夫.mp3">中国功夫</a>
 <h1>===================================</h1>
 <a href="https://xzheifen.github.io/">返回主页</a>
 </body>
