--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>黑手网</title>
 </head>
-<body background="heishoubeijing.png">
+<body>
   <h1>黑手网</h1>
   <h1>===================================</h1>
   <h1>黑手视频在线播放</h1>
