--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>黑手网</title>
 </head>
 <body background="heishoubeijing.png">
-  <h1>黑手网</h1>
+  <h1 style="text-align:center;">黑手网</h1>
   <h1>===================================</h1>
   <h1>黑手视频在线播放</h1>
   <a href="https://xzheifen.github.io/fenye/heji1.html">黑手合集(1)</a>
