--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 <body background="heishoubeijing.png">
   <h1 style="text-align:center;">黑手网</h1>
-  <h1>===================================</h1>
-  <h1>黑手视频在线播放</h1>
+  <h1 style="text-align:center;">===================================</h1>
+  <h1 style="text-align:center;">黑手视频在线播放</h1>
   <a href="https://xzheifen.github.io/fenye/heji1.html">黑手合集(1)</a>
   <a href="https://xzheifen.github.io/fenye/heji2.html">黑手合集(2)</a>
   <a href="https://xzheifen.github.io/fenye/heji3.html">黑手合集(3)</a>
   <a href="https://xzheifen.github.io/fenye/fozu.html">佛祖黑手</a>
-  <h1>===================================</h1>
+  <h1 style="text-align:center;">===================================</h1>
   <a href="https://xzheifen.github.io/fenye/qita.html">其他玩意（无关黑手）</a>
   <a href="https://xzheifen.github.io/fenye/updatelog.html">更新日志</a>
-  <p>===================================</p>
+  <p style="text-align:center;">===================================</p>
   <a href="https://fenggoumusic.github.io/">友情链接：疯狗音乐</a>
 </body>
 </html>
