--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <a href="https://xzheifen.github.io/fenye/heji1.html">黑手合集(1)</a>
   <a href="https://xzheifen.github.io/fenye/heji2.html">黑手合集(2)</a>
   <a href="https://xzheifen.github.io/fenye/heji3.html">黑手合集(3)</a>
+  <a href="https://xzheifen.github.io/fenye/heji4.html">黑手合集(4)</a>
   <a href="https://xzheifen.github.io/fenye/fozu.html">佛祖黑手</a>
   <h1 style="text-align:center;">===================================</h1>
   <a href="https://xzheifen.github.io/fenye/qita.html">其他玩意（无关黑手）</a>
