--- a/fenye/updatelog.html
+++ b/fenye/updatelog.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>更新日志</h1>
-<p>最新页面2.4</p>
+<p>最新页面2.5</p>
 <h1>=================2.0==================</h1>
+<p>2.5：更新黑手视频，添加背景</p>
 <p>2.4：表面上没变，但是代码结构变了许多</p>
 <p>2.3：删除了wxb逃离路线，加入了无关黑手的东西</p>
 <p>2.2：增加视频</p>
