--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1 style="text-align:center;">===================================</h1>
   <h1 style="text-align:center;">各种分区</h1>
   <a href="https://xzheifen.github.io/fenqu/heishou.html">黑手分区</a>
-  <h1>===================================</h1>
+  <h1 style="text-align:center">===================================</h1>
   <a href="https://xzheifen.github.io/fenye/qita.html">其他玩意（无关黑手）</a>
   <a href="https://xzheifen.github.io/fenye/updatelog.html">更新日志</a>
   <p style="text-align:center;">===================================</p>
