--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>老年敢死队视频网</title>
+<title>疯狗视频</title>
 </head>
 <body background="heishoubeijing.png">
-  <h1 style="text-align:center;">老年敢死队视频网</h1>
+  <h1 style="text-align:center;">疯狗视频</h1>
   <h1 style="text-align:center;">===================================</h1>
   <h1 style="text-align:center;">各种分区</h1>
   <a href="https://xzheifen.github.io/fenqu/heishou.html">黑手分区</a>
