--- a/fenye/updatelog.html
+++ b/fenye/updatelog.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>黑手网-更新日志</title>
+<title>疯狗音乐-更新日志</title>
 </head>
 <body>
 <h1>更新日志</h1>
-<p>最新页面2.5</p>
+<p>最新页面fg1.1</p>
+<h1>=================fg1.0==================</h1>
+<p>fg1.1：加入老八分区</p>
+<p>fg1.0：成为疯狗视频网，与疯狗音乐完全合作</p>
 <h1>=================2.0==================</h1>
 <p>2.5：更新黑手视频，添加背景</p>
 <p>2.4：表面上没变，但是代码结构变了许多</p>
