--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>疯狗视频</title>
 </head>
-<body background="heishoubeijing.png">
+<body background="fenggoubeijing.png">
   <h1 style="text-align:center;">疯狗视频</h1>
   <h1 style="text-align:center;">===================================</h1>
   <h1 style="text-align:center;">各种分区</h1>
