--- a/fenqu/laoba.html
+++ b/fenqu/laoba.html
@@ -5,9 +5,9 @@
 <title>老八分区</title>
 </head>
 <body>
-  <a href="https://xzheifen.github.io/fenye/videoradio/laoba1.html">老八第一次吃粑粑</a>
-  <a href="https://xzheifen.github.io/fenye/videoradio/laoba2.html">老八第二次吃粑粑</a>
-  <a href="https://xzheifen.github.io/fenye/videoradio/laoba3.html">老八第三次吃粑粑</a>
+  <a href="https://xzheifen.github.io/fenye/laoba1.html">老八第一次吃粑粑</a>
+  <a href="https://xzheifen.github.io/fenye/laoba2.html">老八第二次吃粑粑</a>
+  <a href="https://xzheifen.github.io/fenye/laoba3.html">老八第三次吃粑粑</a>
   <h1 style="text-align:center;">===================================</h1>
   <a href="https://xzheifen.github.io/">返回主页</a>
 </body>
