--- a/fenye/updatelog.html
+++ b/fenye/updatelog.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>更新日志</h1>
-<p>最新页面fg1.1</p>
+<p>最新页面fg1.1repair</p>
 <h1>=================fg1.0==================</h1>
+<p>fg1.1repair：紧急修复老八分区目录错误的bug</p>
 <p>fg1.1：加入老八分区</p>
 <p>fg1.0：成为疯狗视频网，与疯狗音乐完全合作</p>
 <h1>=================2.0==================</h1>
