--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <h1 style="text-align:center;">各种分区</h1>
   <a href="https://xzheifen.github.io/fenqu/heishou.html">黑手分区</a>
   <a href="https://xzheifen.github.io/fenqu/laoba.html">老八分区</a>
-  <a style="text-align:center" href="https://xzheifen.github.io/fenye/qita.html">其他玩意（无关黑手）</a>
+  <a href="https://xzheifen.github.io/fenye/qita.html">音乐分区</a>
   <h1 style="text-align:center">===================================</h1>
   <a href="https://xzheifen.github.io/fenye/updatelog.html">更新日志</a>
-  <p style="text-align:center;">===================================</p>
-  <a href="https://fenggoumusic.github.io/">友情链接：疯狗音乐</a>
+  <h1 style="text-align:center;">===================================</h1>
+  <a href="https://fenggoumusic.github.io/">疯狗音乐</a>
 </body>
 </html>
