--- a/zhuixue/zhuixue.html
+++ b/zhuixue/zhuixue.html
@@ -5,9 +5,7 @@
 <title>隐藏-黑鑫姐联盟网</title>
 </head>
 <body>
-  <script>
-alert("黑鑫姐我给你辍（zhui）学");
-  </script>
+<script>alert("黑鑫姐我给你辍（zhui）学");</script>
   <h1 style="text-align:center;">黑鑫姐联盟</h1>
   <a href="https://xzheifen.github.io/zhuixue/wangxinheihua.jpg">王鑫黑化.jpg</a>
   <h1 style="text-align:center;">===================================</h1>
