--- a/zhuixue/zhuixue.html
+++ b/zhuixue/zhuixue.html
@@ -5,7 +5,7 @@
 <title>隐藏-黑鑫姐联盟网</title>
 </head>
 <body>
-<script>alert("黑鑫姐我给你辍（zhui）学");</script>
+<script>alert("欢迎来到隐藏页面，黑鑫姐联盟，（话说你是怎么发现的）（如果你不是鑫姐黑或者不是实验小学61班学生，请退出网页）");</script>
   <h1 style="text-align:center;">黑鑫姐联盟</h1>
   <a href="https://xzheifen.github.io/zhuixue/wangxinheihua.jpg">王鑫黑化.jpg</a>
   <h1 style="text-align:center;">===================================</h1>
