--- a/fenye/qita.html
+++ b/fenye/qita.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>黑手网-其他</title>
+<title>音乐分区</title>
 </head>
 <body>
-<h1>其他东西（与黑手无关）</h1>
+<h1>音乐分区</h1>
 <h1>===================================</h1>
 <a href="https://xzheifen.github.io/fenye/videoradio/中国功夫.mp3">中国功夫</a>
 <h1>===================================</h1>
