--- a/zhuixue/geng.html
+++ b/zhuixue/geng.html
@@ -9,6 +9,8 @@
   <h1>===================================</h1>
   <h3>1.缀zhuì学</h3>
   <p>王鑫与权子望吵架，王鑫使用老师常用语句："他让你干什么你就干什么啊....."然后因形近字原因，王鑫不分“缀zhuì”和“辍chuò”，说成缀学（正确：辍学）</p>
+  <h3>2.借警服</h3>
+  <p>升旗，王鑫为护旗手，但无警服，就去它班借。王鑫说认识借她警服的，结果到了升旗那天，王鑫忘了借她警服的是哪个班的了</p>
   <h1>===================================</h1>
   <a href="https://xzheifen.github.io/zhuixue/zhuixue.html">黑鑫姐联盟网</a>
 </body>
