--- a/fenqu/laoba.html
+++ b/fenqu/laoba.html
@@ -8,10 +8,10 @@
 <script>
 alert("视频编码错误了，没有画面，马上我去修复，先凑合听听声音吧（再催我给你辍（zhui）学");
 </script>
-  <a href="https://xzheifen.github.io/fenye/laoba1.html">老八第一次吃粑粑</a>
-  <a href="https://xzheifen.github.io/fenye/laoba2.html">老八第二次吃粑粑</a>
-  <a href="https://xzheifen.github.io/fenye/laoba3.html">老八第三次吃粑粑</a>
+  <a href="https://crazydogvideo.github.io/fenye/laoba1.html">老八第一次吃粑粑</a>
+  <a href="https://crazydogvideo.github.io/fenye/laoba2.html">老八第二次吃粑粑</a>
+  <a href="https://crazydogvideo.github.io/fenye/laoba3.html">老八第三次吃粑粑</a>
   <h1 style="text-align:center;">===================================</h1>
-  <a href="https://xzheifen.github.io/">返回主页</a>
+  <a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
