--- a/fenye/heji1.html
+++ b/fenye/heji1.html
@@ -8,6 +8,6 @@
 <h1>黑手合集(1)</h1>
 <p>播放请调小音量</p>
 <video width="800" autoplay="autoplay" controls="controls" src="videoradio/heji1.mp4"></video>
-<a href="https://xzheifen.github.io/">返回主页</a>
+<a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
