--- a/fenye/qita.html
+++ b/fenye/qita.html
@@ -7,8 +7,8 @@
 <body>
 <h1>音乐分区</h1>
 <h1>===================================</h1>
-<a href="https://xzheifen.github.io/fenye/videoradio/中国功夫.mp3">中国功夫</a>
+<a href="https://crazydogvideo.github.io/fenye/videoradio/中国功夫.mp3">中国功夫</a>
 <h1>===================================</h1>
-<a href="https://xzheifen.github.io/">返回主页</a>
+<a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
