--- a/fenye/updatelog.html
+++ b/fenye/updatelog.html
@@ -26,6 +26,6 @@
 <p>β2：修复了无法访问</p>
 <p>β1：将肖战黑粉网改造成黑手网，引进第一个视频</p>
 <h1>===================================</h1>
-<a href="https://xzheifen.github.io/">返回主页</a>
+<a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
