--- a/zhuixue/geng.html
+++ b/zhuixue/geng.html
@@ -12,6 +12,6 @@
   <h3>2.借警服</h3>
   <p>升旗，王鑫为护旗手，但无警服，就去它班借。王鑫说认识借她警服的，结果到了升旗那天，王鑫忘了借她警服的是哪个班的了</p>
   <h1>===================================</h1>
-  <a href="https://xzheifen.github.io/zhuixue/zhuixue.html">黑鑫姐联盟网</a>
+  <a href="https://crazydogvideo.github.io/zhuixue/zhuixue.html">黑鑫姐联盟网</a>
 </body>
 </html>
