--- a/fenqu/heishou.html
+++ b/fenqu/heishou.html
@@ -5,12 +5,12 @@
 <title>黑手分区</title>
 </head>
 <body>
-  <a href="https://xzheifen.github.io/fenye/heji1.html">黑手合集(1)</a>
-  <a href="https://xzheifen.github.io/fenye/heji2.html">黑手合集(2)</a>
-  <a href="https://xzheifen.github.io/fenye/heji3.html">黑手合集(3)</a>
-  <a href="https://xzheifen.github.io/fenye/zhibo.html">黑手直播录像</a>
-  <a href="https://xzheifen.github.io/fenye/fozu.html">佛祖黑手</a>
+  <a href="https://crazydogvideo.github.io/fenye/heji1.html">黑手合集(1)</a>
+  <a href="https://crazydogvideo.github.io/fenye/heji2.html">黑手合集(2)</a>
+  <a href="https://crazydogvideo.github.io/fenye/heji3.html">黑手合集(3)</a>
+  <a href="https://crazydogvideo.github.io/fenye/zhibo.html">黑手直播录像</a>
+  <a href="https://crazydogvideo.github.io/fenye/fozu.html">佛祖黑手</a>
   <h1 style="text-align:center;">===================================</h1>
-  <a href="https://xzheifen.github.io/">返回主页</a>
+  <a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
