--- a/fenye/fozu.html
+++ b/fenye/fozu.html
@@ -8,6 +8,6 @@
 <h1>佛祖黑手</h1>
 <p>播放请调小音量</p>
 <video width="800" autoplay="autoplay" controls="controls" src="videoradio/fozu.mp4"></video>
-<a href="https://xzheifen.github.io/">返回主页</a>
+<a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
