--- a/fenye/laoba2.html
+++ b/fenye/laoba2.html
@@ -8,6 +8,6 @@
 <h1>老八第二次吃粑粑</h1>
 <p>播放请调小音量</p>
 <video width="800" autoplay="autoplay" controls="controls" src="videoradio/laoba2.mp4"></video>
-<a href="https://xzheifen.github.io/">返回主页</a>
+<a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
