--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 style="text-align:center;">各种分区</h1>
   <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
   <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
-  <a href="https://crazydogvideo.github.io/fenye/qita.html">音乐分区</a>
+  <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
   <h1 style="text-align:center">===================================</h1>
   <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
   <h1 style="text-align:center;">===================================</h1>
