--- a/zhuixue/zhuixue.html
+++ b/zhuixue/zhuixue.html
@@ -2,13 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>隐藏-黑鑫姐联盟网</title>
+<title>休想找到</title>
 </head>
 <body>
-<script>alert("欢迎来到隐藏页面，黑鑫姐联盟，（话说你是怎么发现的）（如果你不是鑫姐黑或者不是实验小学61班学生，请退出网页）");</script>
-  <h1 style="text-align:center;">黑鑫姐联盟</h1>
-  <a href="https://crazydogvideo.github.io/zhuixue/wangxinheihua.jpg">王鑫黑化.jpg</a>
-  <a href="https://crazydogvideo.github.io/zhuixue/geng.html">王鑫黑历史/梗</a>
+<script>alert("此网页已关闭");</script>
   <h1 style="text-align:center;">===================================</h1>
   <a href="https://crazydogvideo.github.io/">疯狗视频</a>
 </body>
