--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body background="fenggoubeijing.png">
   <h1 style="text-align:center;">疯狗视频</h1>
-  <marquee>公告：此为疯狗视频新网址，liuyue.tk不再更新，如果liuyue.tk更新</marquee>
+  <marquee>######公告：此为疯狗视频新网址，liuyue.tk不再更新######</marquee>
   <h1 style="text-align:center;">===================================</h1>
   <h1 style="text-align:center;">各种分区</h1>
   <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
