--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
   <h1 style="text-align:center">===================================</h1>
   <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
-  <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意（可能有助于你）</a>
+  <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意</a>
   <h1 style="text-align:center;">===================================</h1>
   <a href="https://fenggoumusic.github.io/">疯狗音乐</a>
 </body>
