--- a/qita/qita.html
+++ b/qita/qita.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>其他玩意</h1>
-<p>未启用</p>
+<a href="https://crazydogvideo.github.io/qita/shuoming.html">说明</a>
 <a href="https://crazydogvideo.github.io/">返回主页</a>
 </body>
 </html>
