--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <marquee>######公告：此为疯狗视频新网址，liuyue.tk不再更新######</marquee>
   <h1 class="fengexian">===================================</h1>
   <h1 class="fengexian">各种分区</h1>
-  <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
+  <a class="fengexian" href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
   <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
   <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
   <h1 class="fengexian">===================================</h1>
