--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <h1 style="text-align:center;">疯狗视频</h1>
   <marquee>######公告：此为疯狗视频新网址，liuyue.tk不再更新######</marquee>
   <h1 class="fengexian">===================================</h1>
-  <h1 class="fengexian">各种分区</h1>
-  <a class="fengexian" href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
-  <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
-  <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
+  <div styel="text-align:center;">
+    <h1 class="fengexian">各种分区</h1>
+    <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
+    <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
+    <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
+  </div>
   <h1 class="fengexian">===================================</h1>
   <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
   <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意</a>
