--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body background="fenggoubeijing.png">
   <h1 style="text-align:center;">疯狗视频</h1>
-  <marquee>######公告：此为疯狗视频新网址，liuyue.tk不再更新######</marquee>
+  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
+  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
+  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
+  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
   <h1 class="fengexian">===================================</h1>
   <div styel="text-align:center;">
     <h1 class="fengexian">各种分区</h1>
