--- a/index.html
+++ b/index.html
@@ -2,25 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>疯狗视频</title>
+<title>停运</title>
 <link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body background="fenggoubeijing.png">
-  <h1 style="text-align:center;">疯狗视频</h1>
-  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
-  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
-  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
-  <marquee>###本网站停运，不再更新，请去：xzheifen.github.io###</marquee>
-  <h1 class="fengexian">===================================</h1>
-  <div styel="text-align:center;">
-    <h1 class="fengexian">各种分区</h1>
-    <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
-    <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
-    <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
-  </div>
-  <h1 class="fengexian">===================================</h1>
-  <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
-  <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意</a>
-  <h1 class="fengexian">===================================</h1>
+  <h1 style="text-align:center;">停运</h1>
+  <marquee>###本网站已于2021.6.19完全停运，xzheifen.github.io也已停运###</marquee>
+  <h1>停运原因：有个人带着个骚嘴巴子搁那话车的，到处瞎传，使很多人“近朱者赤，近墨者黑”，然后还搁那掩耳盗铃，当做不知道，万一某天被王老儿或刘校儿知道了，临时删库可来不及了，所以以防后患</h1>
+  <p>ps：如果真想看请联系作者要取主页链接</p>
 </body>
 </html>
