--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body background="fenggoubeijing.png">
   <h1 style="text-align:center;">跳转</h1>
-  <a href="zhuye.htnl">点击跳转主页</a>
+  <a href="zhuye.html">点击跳转主页</a>
 </body>
 </html>
