--- a/zhuye.html
+++ b/zhuye.html
@@ -8,7 +8,7 @@
 <body background="fenggoubeijing.png">
   <h1 style="text-align:center;">疯狗视频</h1>
   <h1 class="fengexian">===================================</h1>
-  <div styel="text-align:center;">
+  <div class="fengexian">
     <h1 class="fengexian">各种分区</h1>
     <a href="https://crazydogvideo.github.io/fenqu/heishou.html">黑手分区</a>
     <a href="https://crazydogvideo.github.io/fenqu/laoba.html">老八分区</a>
