--- a/zhuye.html
+++ b/zhuye.html
@@ -15,8 +15,10 @@
     <a href="https://crazydogvideo.github.io/fenye/music.html">音乐分区</a>
   </div>
   <h1 class="fengexian">===================================</h1>
-  <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
-  <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意</a>
-  <h1 class="fengexian">===================================</h1>
+  <div class="fengexian">
+    <a href="https://crazydogvideo.github.io/fenye/updatelog.html">更新日志</a>
+    <a href="https://crazydogvideo.github.io/qita/qita.html">其他玩意</a>
+    <h1 class="fengexian">===================================</h1>
+  </div>
 </body>
 </html>
