--- a/fenqu/heishou.html
+++ b/fenqu/heishou.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>黑手分区</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
   <a href="https://crazydogvideo.github.io/fenye/heji1.html">黑手合集(1)</a>
