--- a/fenye/heji2.html
+++ b/fenye/heji2.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>疯狗视频-黑手合集(2)</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
 <h1>黑手合集(2)</h1>
