--- a/fenye/updatelog.html
+++ b/fenye/updatelog.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>疯狗视频-更新日志</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
 <h1>更新日志</h1>
