--- a/fenqu/laoba.html
+++ b/fenqu/laoba.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>老八分区</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
 <script>
