--- a/fenye/laoba1.html
+++ b/fenye/laoba1.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>疯狗视频</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
 <h1>老八第一次吃粑粑</h1>
