--- a/fenye/music.html
+++ b/fenye/music.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>音乐分区</title>
+<link rel="stylesheet" type="text/css" href="css/shouye.css">
 </head>
 <body>
 <h1>音乐分区</h1>
